--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The missing star history graph of github projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack -d --watch",
+    "build": "webpack -p"
   },
   "keywords": [
     "github",
@@ -13,14 +14,17 @@
   ],
   "author": "timqian",
   "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^5.8.24",
-    "babel-loader": "^5.3.2",
-    "webpack": "^1.12.1"
-  },
   "dependencies": {
     "axios": "^0.5.4",
+    "babel-polyfill": "^6.5.0",
     "d3": "^3.5.6",
     "nvd3": "^1.8.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "webpack": "^1.12.14"
   }
 }
