--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.9.1",
-    "babel-polyfill": "^6.5.0",
     "d3": "^3.5.6",
     "nvd3": "^1.8.1"
   },
@@ -25,6 +24,7 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "webpack": "^1.12.14"
   }
 }
